task5/tests/our-tests/output/t2.out
lli: <stdin>:38:20: error: use of undefined value '%-21991'
%t5 = add i32 %t6, %-21991
                   ^

